// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionalBanner should match snapshot (custom message) 1`] = `
.c2 {
  grid-area: icon;
  margin-top: var(--spacing-half);
}

.c0 {
  background-color: #F3F9FD;
  border: 1px solid #006296;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  line-height: 24px;
  padding: var(--spacing-2x) var(--spacing-3x);
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 .c1 {
  color: #006296;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 1rem;
  width: 1rem;
}

.c5 {
  font-size: 0.875rem;
  margin: var(--spacing-half) 0 0 0;
}

.c3 {
  box-sizing: border-box;
  grid-area: content;
  margin-left: var(--spacing-1halfx);
}

.c4 {
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5;
  margin: 0;
}

<section
  aria-atomic="true"
  aria-labelledby="uuid1"
  aria-live="polite"
  class="c0"
  role="status"
>
  <svg
    aria-hidden="true"
    class="c1 c2"
    color="currentColor"
    focusable="false"
    height="20"
    width="20"
  />
  <div
    class="c3"
  >
    <span
      class="c4"
      id="uuid1"
    >
      Information
    </span>
    <div
      class="c5"
    >
      <p>
        Some sub title
      </p>
      <ul>
        <li>
          Some bullet point
        </li>
      </ul>
    </div>
  </div>
</section>
`;

exports[`SectionalBanner should match snapshot (desktop) 1`] = `
.c2 {
  grid-area: icon;
  margin-top: var(--spacing-half);
}

.c0 {
  background-color: #F3F9FD;
  border: 1px solid #006296;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  line-height: 24px;
  padding: var(--spacing-2x) var(--spacing-3x);
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 .c1 {
  color: #006296;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 1rem;
  width: 1rem;
}

.c5 {
  font-size: 0.875rem;
  margin: var(--spacing-half) 0 0 0;
}

.c3 {
  box-sizing: border-box;
  grid-area: content;
  margin-left: var(--spacing-1halfx);
}

.c4 {
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5;
  margin: 0;
}

<section
  aria-atomic="true"
  aria-labelledby="uuid1"
  aria-live="polite"
  class="c0"
  role="status"
>
  <svg
    aria-hidden="true"
    class="c1 c2"
    color="currentColor"
    focusable="false"
    height="20"
    width="20"
  />
  <div
    class="c3"
  >
    <span
      class="c4"
      id="uuid1"
    >
      Information
    </span>
    <p
      class="c5"
    >
      Test
    </p>
  </div>
</section>
`;

exports[`SectionalBanner should match snapshot (mobile) 1`] = `
.c2 {
  grid-area: icon;
  margin-top: var(--spacing-1x);
}

.c0 {
  background-color: #F3F9FD;
  border: 1px solid #006296;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  line-height: 28px;
  padding: var(--spacing-3x) var(--spacing-2x);
  position: relative;
  width: 100%;
  display: grid;
  grid-template-areas: 'icon content' 'button button';
  grid-template-columns: auto 1fr;
}

.c0:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 .c1 {
  color: #006296;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 1rem;
  width: 1rem;
}

.c5 {
  font-size: 1rem;
  margin: var(--spacing-2x) 0 0 0;
}

.c3 {
  box-sizing: border-box;
  grid-area: content;
  margin-left: var(--spacing-1halfx);
}

.c4 {
  font-size: 1.125rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.7;
  margin: 0;
}

<section
  aria-atomic="true"
  aria-labelledby="uuid1"
  aria-live="polite"
  class="c0"
  role="status"
>
  <svg
    aria-hidden="true"
    class="c1 c2"
    color="currentColor"
    focusable="false"
    height="24"
    width="24"
  />
  <div
    class="c3"
  >
    <span
      class="c4"
      id="uuid1"
    >
      Information
    </span>
    <p
      class="c5"
    >
      Test
    </p>
  </div>
</section>
`;
